# opengamebox

./: .gitignore  CMakeLists.txt  TODO.txt  master-server.cfg  opengamebox.cfg  server.cfg
data/: .gitignore
data/core/: AUTHORS.txt  INFO.txt  package.txt
data/core/objects/: board.txt  card.txt
data/core/scripts/: deck.txt  pieces_black.txt  pieces_blue.txt  pieces_cyan.txt  pieces_green.txt  pieces_orange.txt  pieces_purple.txt  pieces_red.txt  pieces_white.txt  pieces_yellow.txt
gfx/: AUTHORS.txt
packaging/: windows-resources.rc
src/: CMakeLists.txt  client.cpp  client.h  color.cpp  color.h  coordinates.cpp  coordinates.h  irenderer.h  net.cpp  net.h  object.cpp  object.h  objectClass.cpp  objectClass.h  objectClassManager.cpp  objectClassManager.h  packet.cpp  packet.h  serverClient.cpp  serverClient.h  settings.cpp  settings.h  utils.cpp  utils.h  vector2.cpp  vector2.h
src/client/: CMakeLists.txt  main.cpp  main.h  renderer.cpp  renderer.h  widget.cpp  widget.h
src/client/widgets/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  inputBox.cpp  inputBox.h  progressBar.cpp  progressBar.h  textarea.cpp  textarea.h
src/master-server/: CMakeLists.txt  main.cpp  main.h
src/server/: CMakeLists.txt  main.cpp  main.h
utils/createcard/: createcard.sh
